[package]
name = "grader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"]}
tokio = { version = "1.21.1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.144", features =["derive", "serde_derive"] }
serde_json = "1.0.85"
parse_link_header = "0.3.2"
anyhow = "1.0.65"
futures = "0.3.24"
clap = { version = "3.2.22", features = ["derive", "env"] }
